--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc build && webpack serve --open --mode development",
-    "develop": "webpack-dev-server --mode development"
+    "develop": "webpack-dev-server --mode development",
+    "build" : "tsc --build"
   },
   "keywords": [],
   "author": "",
