--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -7,7 +7,8 @@
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
-        "moduleResolution": "Node"
+        "moduleResolution": "Node",
+        "outDir": "dist"
     },
     "include": ["src"]
 }
